--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -131,6 +131,8 @@ function init() {
     $("#LONGITUDE_OFFSET").val(0.0);
     $("#AZIMUTH_ANGLE").val(camera_az);
     $("#IMAGE_CIRCLE_DIAMETER").val(camera_lensimagecircle);
+    $("#OFFSET_X").val(camera_lens_offset_x);
+    $("#OFFSET_Y").val(camera_lens_offset_y);
 
 
     loadNextImage();
@@ -158,6 +160,8 @@ async function loop() {
             latitude_offset = Number($("#LATITUDE_OFFSET").val());
             longitude_offset = Number($("#LONGITUDE_OFFSET").val());
             image_circle_diameter = Number($("#IMAGE_CIRCLE_DIAMETER").val());
+            offset_x = Number($("#OFFSET_X").val());
+            offset_y = Number($("#OFFSET_Y").val());
 
             var vs_latitude = camera_latitude + latitude_offset;
             var vs_longitude = camera_longitude + longitude_offset;
@@ -173,8 +177,8 @@ async function loop() {
             const image_scale = render_width / image_width;
 
             // Determine offsets of the starmap overlay
-            const bias_left = ((( image_circle_diameter * image_scale - render_width ) / 2) - ( camera_lens_offset_x * image_scale )) * -1;
-            const bias_top = ((( image_circle_diameter * image_scale - render_height ) / 2) + ( camera_lens_offset_y * image_scale )) * -1;
+            const bias_left = ((( image_circle_diameter * image_scale - render_width ) / 2) - ( offset_x * image_scale )) * -1;
+            const bias_top = ((( image_circle_diameter * image_scale - render_height ) / 2) + ( offset_y * image_scale )) * -1;
 
             // Apply those dimensions to the starmap container
             $('#starmap_container').css({
@@ -382,10 +386,18 @@ function closeFullscreen() {
             {{ form_virtualsky.IMAGE_CIRCLE_DIAMETER(class='form-control bg-secondary') }}
         </div>
 
+        <div class="col-sm-1">
+            {{ form_virtualsky.OFFSET_X.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-1">
+            {{ form_virtualsky.OFFSET_X(class='form-control bg-secondary') }}
+        </div>
 
         <div class="col-sm-1">
-            <!-- This button does not do anything, it just gives the user something to click instead of the image (which will go fullscreen) -->
-            <button class="btn btn-primary">Refresh</button>
+            {{ form_virtualsky.OFFSET_Y.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-1">
+            {{ form_virtualsky.OFFSET_Y(class='form-control bg-secondary') }}
         </div>
     </div>
 </form>
@@ -440,6 +452,21 @@ $("#IMAGE_CIRCLE_DIAMETER").on("change", function() {
         showImage(json_data['latest_image']);
     };
 });
+
+$("#OFFSET_X").on("change", function() {
+    if (json_data['latest_image']) {
+        redraw_planetarium = true;
+        showImage(json_data['latest_image']);
+    };
+});
+
+$("#OFFSET_Y").on("change", function() {
+    if (json_data['latest_image']) {
+        redraw_planetarium = true;
+        showImage(json_data['latest_image']);
+    };
+});
+
 
 $( document ).ready(function() {
     $('#latest-image').on("click", function() {
