Add new MTF options to views.

--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -395,6 +395,19 @@ var fullscreen = false;  //initial state
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE2_BLACK_CLIP.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE2_BLACK_CLIP(class='form-control bg-secondary') }}
+            <div id="IMAGE_STRETCH__MODE1_BLACK_CLIP-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default -2.8 - It is recommended not to adjust this setting</div>
+        </div>
+    </div>
+    
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_image_processing.IMAGE_STRETCH__MODE2_SHADOWS.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -1867,6 +1880,7 @@ const field_names = [
     'IMAGE_STRETCH__CLASSNAME',
     'IMAGE_STRETCH__MODE1_GAMMA',
     'IMAGE_STRETCH__MODE1_STDDEVS',
+    'IMAGE_STRETCH__MODE2_BLACK_CLIP',
     'IMAGE_STRETCH__MODE2_SHADOWS',
     'IMAGE_STRETCH__MODE2_MIDTONES',
     'IMAGE_STRETCH__MODE2_HIGHLIGHTS',
