--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1429,6 +1429,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.IMAGE_STRETCH__MODE2_BLACK_CLIP.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_STRETCH__MODE2_BLACK_CLIP(class='form-control bg-secondary') }}
+            <div id="IMAGE_STRETCH__MODE2_BLACK_CLIP-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default -2.8 - It is recommended not to adjust this setting</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.IMAGE_STRETCH__MODE2_SHADOWS.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
