Add black clip variable to processing form.

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -8580,6 +8580,7 @@ const field_names = [
     'IMAGE_STRETCH__CLASSNAME',
     'IMAGE_STRETCH__MODE1_GAMMA',
     'IMAGE_STRETCH__MODE1_STDDEVS',
+    'IMAGE_STRETCH__MODE2_BLACK_CLIP',
     'IMAGE_STRETCH__MODE2_SHADOWS',
     'IMAGE_STRETCH__MODE2_MIDTONES',
     'IMAGE_STRETCH__MODE2_HIGHLIGHTS',
