--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4347,7 +4347,7 @@ var camera_id = {{ camera_id }};
             <div id="LENS_AZIMUTH-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div><span class="badge rounded-pill bg-info text-dark">Note</span> This affects Cardinal directions</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> This affects Cardinal directions and VirtualSky</div>
         </div>
     </div>
 
