--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -146,8 +146,6 @@ async function loop() {
             image_circle_diameter = Number($("#IMAGE_CIRCLE_DIAMETER").val());
             offset_x = Number($("#OFFSET_X").val());
             offset_y = Number($("#OFFSET_Y").val());
-            flip_ns = $("#FLIP_NS").prop('checked');
-            flip_ew = $("#FLIP_EW").prop('checked');
 
             var vs_latitude = camera_latitude + latitude_offset;
             var vs_longitude = camera_longitude + longitude_offset;
@@ -190,22 +188,9 @@ async function loop() {
             }
 
 
-            if (flip_ns) {
-                if (vs_az <= 180) {
-                    vs_az = Math.abs(vs_az - 180);
-                } else {
-                    vs_az = 540 - vs_az;
-                }
-
-            }
-
-
             // Most cameras are east/west reversed
-            if (! flip_ew) {
-                var vs_az = 360 - vs_az;
-            }
+            var vs_az = 360 - vs_az;
             console.log("Calculated VirtualSky Azimuth: " + vs_az);
-
 
 
             if (timestamp) {
@@ -358,6 +343,7 @@ function closeFullscreen() {
 <div class="container h-100">
 <form id="form_virtualsky" onSubmit="return false;">
     <div class="form-group row" style="font-size:12px">
+        <div class="col-sm-3"></div>
         <div class="col-sm-1">
             {{ form_virtualsky.AZIMUTH_ANGLE.label(class='col-form-label') }}
         </div>
@@ -381,17 +367,10 @@ function closeFullscreen() {
         <div class="col-sm-1">
             {{ form_virtualsky.OFFSET_Y.label(class='col-form-label') }}
         </div>
-
-        <div class="col-sm-1">
-            {{ form_virtualsky.FLIP_NS.label(class='col-form-label') }}
-        </div>
-
-        <div class="col-sm-1">
-            {{ form_virtualsky.FLIP_EW.label(class='col-form-label') }}
-        </div>
     </div>
 
     <div class="form-group row">
+        <div class="col-sm-3"></div>
         <div class="col-sm-1">
             {{ form_virtualsky.AZIMUTH_ANGLE(class='form-control bg-secondary') }}
         </div>
@@ -414,18 +393,6 @@ function closeFullscreen() {
 
         <div class="col-sm-1">
             {{ form_virtualsky.OFFSET_Y(class='form-control bg-secondary') }}
-        </div>
-
-        <div class="col-sm-1">
-            <div class="form-switch">
-                {{ form_virtualsky.FLIP_NS(class='form-check-input') }}
-            </div>
-        </div>
-
-        <div class="col-sm-1">
-            <div class="form-switch">
-                {{ form_virtualsky.FLIP_EW(class='form-check-input') }}
-            </div>
         </div>
     </div>
 </form>
@@ -489,20 +456,6 @@ $("#OFFSET_X").on("change", function() {
 });
 
 $("#OFFSET_Y").on("change", function() {
-    if (json_data['image_list'].length > 0) {
-        redraw_planetarium = true;
-        showImage(json_data['image_list'][0]);
-    };
-});
-
-$("#FLIP_NS").on("change", function() {
-    if (json_data['image_list'].length > 0) {
-        redraw_planetarium = true;
-        showImage(json_data['image_list'][0]);
-    };
-});
-
-$("#FLIP_EW").on("change", function() {
     if (json_data['image_list'].length > 0) {
         redraw_planetarium = true;
         showImage(json_data['image_list'][0]);
