--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4390,6 +4390,35 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.VIRTUALSKY__MAGNITUDE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.VIRTUALSKY__MAGNITUDE(class='form-control bg-secondary') }}
+            <div id="VIRTUALSKY__MAGNITUDE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default: 5.0</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.VIRTUALSKY__CONSTELLATIONS.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.VIRTUALSKY__CONSTELLATIONS(class='form-check-input') }}
+                <div id="VIRTUALSKY__CONSTELLATIONS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.VIRTUALSKY__LATITUDE_OFFSET.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -8890,6 +8919,7 @@ const field_names = [
     'TEST_CAMERA__ROTATING_STAR_COUNT',
     'TEST_CAMERA__ROTATING_STAR_FACTOR',
     'TEST_CAMERA__BUBBLE_COUNT',
+    'VIRTUALSKY__MAGNITUDE',
     'VIRTUALSKY__IMAGE_CIRCLE_DIAMETER',
     'VIRTUALSKY__LATITUDE_OFFSET',
     'VIRTUALSKY__LONGITUDE_OFFSET',
@@ -9139,6 +9169,7 @@ const checkbox_field_names = [
     'LIBCAMERA__IMMEDIATE_DAY',
     'ACCUM_CAMERA__EVEN_EXPOSURES',
     'ACCUM_CAMERA__CLAMP_16BIT',
+    'VIRTUALSKY__CONSTELLATIONS',
     'TEMP_SENSOR__DHT_USE_PULSEIO',
     'TEMP_SENSOR__SHT3X_HEATER_NIGHT',
     'TEMP_SENSOR__SHT3X_HEATER_DAY',
